--- a/style.css
+++ b/style.css
@@ -1,9 +1,14 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
 body{
+    font-family: Roboto, sans-serif;
     display: flex;
     flex-direction: column;
+    min-width: ;;
+    margin: 0;
 }
 .first,.footer{
     background-color: #1f2937;
+    display: flex;
 }
 .banner-header{
     font-size: 48px;
@@ -18,22 +23,157 @@ body{
     color: #f9faf8;
     font-size: 24px;
 }
-.button{
+.sign-up{
     background-color: #3882f6;
+    color: white;
+    border-radius: 6px;
+    padding: 8px 16px;
+    font-size: 16px;
+    margin: 0;
+    border: 0px;
+    max-width: 100px;
 }
 .call-to-action{
+    display: flex;
     background-color: #3882f6;
+    width: 75%;
+    border-radius: 8px;
+    padding: 48px 64px;
+    justify-content: space-around;
 }
 .title{
     color: #1f2937;
     font-size: 36px;
     font-weight: bolder;
 }
+.first{
+    flex-direction: column;
+}
+.second{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    gap: 16px;
+    padding: 48px 0;
+}
 .third{
     background-color: #e5e7eb;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 48px;
+}
+.fourth{
+    display: flex;
+    padding: 24px 48px;
+    justify-content: space-around;
+    padding: 96px;
 }
 .quote{
     font-size: 36px;
     font-weight: lighter;
+    font-style: italic;
     color: #1f2937;
+    align-self: flex-start;
+    width: 75%;
+    align-self: center;
+}
+.header{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.links > ul{
+    display: flex;
+    justify-content: space-between;
+    gap: 16px;
+}
+li{
+    list-style-type: none;
+}
+.logo{
+    font-weight: bold;
+    text-shadow: 2px 4px 4px rgb(3, 13, 41);
+}
+img{
+    width: 200px;
+    height: auto;
+    border: 16px;
+    border-color: #f9faf8;
+    border-radius: 6px;
+    margin: 32px 0;
+}
+.hero{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.hero-banner{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 16px;
+}
+.content{
+    display: flex;
+    justify-content: space-around;
+    flex-shrink: 0;
+    padding: 16px;
+    gap : 32px;
+    
+}
+.content > .card > img{
+    width: 100px;
+    padding:32px;
+    border: medium ridge #3882f6;
+    border-radius: 16px;
+}
+.author{
+    margin-left: auto;
+    margin-right: 12.5%;
+    font-size: 24px;
+    font-weight: bolder;
+}
+.msg{
+    color: white;
+    font-size: 32px;
+
+}
+.action{
+    color: rgb(221, 221, 221);
+    font-size: 24px;
+    
+}
+.call-sign-up{
+    border: medium ridge white;
+    background-color: #3882f6;
+    color: white;
+    border-radius: 6px;
+    padding: 4px 16px;
+    font-size: 16px;
+    margin: 0;
+    max-width: 100px;
+    max-height: 36px;
+    align-self: center;
+}
+.footer{
+    padding: 24px;
+    justify-content: space-around;
+}
+.copyright{
+    color: white;
+}
+.card{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0;
+
+}
+.description{
+    text-align:start;
+    width: 100px;
+    padding: 0;
+    margin: 0;
 }
